Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-15241

[C++] MakeArrayOfNull fails on extension types with a nested storage type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • C++

    Description

      I detected this as part of the PR to switch over to the async scanner as the async scanner always creates an empty array as a placeholder. Some python tests using extension types with nested types then started failing.

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              westonpace Weston Pace
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h