ARROW-15241: Refined the fix so that the out array still has the extension type, but resizes the child data to accomadate the storage type